# gams-xml-catalog

./: .gitignore  .gitlab-ci.yml  LICENCE  README.md  pyproject.toml
src/gams_xml_catalog/: __init__.py  check_imports.py  resolver.py
src/gams_xml_catalog/catalog/: catalog.xml
src/gams_xml_catalog/catalog/datacite/: catalog.xml
src/gams_xml_catalog/catalog/datacite/kernel-4/include/: doit.sh
src/gams_xml_catalog/catalog/dublincore/: catalog.xml
src/gams_xml_catalog/catalog/europeana/: catalog.xml
src/gams_xml_catalog/catalog/example/: catalog.xml
src/gams_xml_catalog/catalog/isotc211/: catalog.xml
src/gams_xml_catalog/catalog/lido/: README.md  catalog.xml  lido-v1-0.xsd
src/gams_xml_catalog/catalog/loc/: catalog.xml
src/gams_xml_catalog/catalog/loc/mets/: README.txt  catalog.xml
src/gams_xml_catalog/catalog/loc/mods/: README.txt  catalog.xml  loc.py  mods.xsd
src/gams_xml_catalog/catalog/loc/premis/: README.txt  catalog.xml
src/gams_xml_catalog/catalog/opengis/: catalog.xml
src/gams_xml_catalog/catalog/tei/: README.txt  catalog.xml
src/gams_xml_catalog/catalog/tei/p5/dtd/: tei_bare.dtd  tei_basic.dtd  tei_corpus.dtd  tei_customization.dtd  tei_drama.dtd  tei_enrich.dtd  tei_its.dtd  tei_jtei.dtd  tei_math.dtd  tei_minimal.dtd  tei_ms.dtd  tei_odds.dtd  tei_simplePrint.dtd  tei_speech.dtd  tei_svg.dtd  tei_tite.dtd  tei_xinclude.dtd
src/gams_xml_catalog/catalog/tei/p5/relaxng/: tei_all-examples.rng  tei_all.rnc  tei_allPlus-examples.rng  tei_allPlus.rnc  tei_allPlus.rng  tei_bare-examples.rng  tei_bare.rnc  tei_bare.rng  tei_basic-examples.rng  tei_basic.rnc  tei_basic.rng  tei_corpus-examples.rng  tei_corpus.rnc  tei_corpus.rng  tei_customization.rnc  tei_customization.rng  tei_drama-examples.rng  tei_drama.rnc  tei_drama.rng  tei_enrich-examples.rng  tei_enrich.rnc  tei_enrich.rng  tei_its.rnc  tei_its.rng  tei_jtei.rnc  tei_jtei.rng  tei_lite-examples.rng  tei_lite.rnc  tei_lite.rng  tei_lite_fr-examples.rng  tei_math.rnc  tei_math.rng  tei_minimal-examples.rng  tei_minimal.rnc  tei_minimal.rng  tei_ms-examples.rng  tei_ms.rnc  tei_ms.rng  tei_odds.rnc  tei_simplePrint-examples.rng  (+12 more)
src/gams_xml_catalog/catalog/w3c/: catalog.xml
src/gams_xml_catalog/catalog/w3c/math/: catalog.xml
src/gams_xml_catalog/catalog/w3c/xinclude/: catalog.xml
src/gams_xml_catalog/catalog/w3c/xlink/: catalog.xml
src/gams_xml_catalog/catalog/w3c/xml/: catalog.xml
src/gams_xml_catalog/catalog/w3c/xmlschema/: catalog.xml
tests/: conftest.py  test_basic_resolve.py  test_included_schemas.py  test_main_schemas.py  test_resolver.py  test_xmlcatalog_init.py
tests/data/datacite/: datacite_uris.txt
tests/data/dublincore/: xsd_uris.txt
tests/data/europeana/: edm_uris.txt
tests/data/example/: example.txt
tests/data/lido/: lido_uris.txt
tests/data/loc/: mets_xsd_uris.txt  mods_xsd_uris.txt  premis_xsd_uris.txt
tests/data/opengis/: opengis_uris.txt
tests/data/tei/: p4_dtd_uris.txt  p5_dtd_uris.txt  p5_rng_uris.txt  p5_xsd_uris.txt
tests/data/w3c/: mathml_dtd_uris.txt  mathml_xsd_uris.txt  xinclude_xsd_uris.txt  xlink_xsd_uris.txt  xml_xsd_uris.txt  xmlschema_dtd_uris.txt  xmlschema_xsd_uris.txt
utils/: check_imports.py
(+9 files in other folders)
