[project]
name = "gams-xml-catalog"
version = "0.6.2"
description = "Python package providing schema files commonly needed in GAMS projects, along with utilities to interact with the catalog."
readme = "README.md"
authors = [
    { name = "Gunter Vasold", email = "gunter.vasold@uni-graz.at" }
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DHGraz/gams-xml-catalog"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/DHGraz/gams-xml-catalog"
Issues = "https://github.com/DHGraz/gams-xml-catalog/issues"
#Changelog = "https://github.com/DHGraz/gams-gams_xml_catalog/blob/main/CHANGELOG.md"

Homepage = "https://github.com/DHGraz/gams-xml-catalog"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/DHGraz/gams-xml-catalog"
Issues = "https://github.com/DHGraz/gams-xml-catalog/issues"
#Changelog = "https://github.com/DHGraz/gams-gams_xml_catalog/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "lxml>=6.0.2",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "ruff>=0.15.2",
]

[project.scripts]  
check_imports = "gams_xml_catalog.check_imports:cli"  